<resources>
    <string name="app_name">Pharmacy Crack</string>

    <string name="facebook_app_id">531713431519858</string>
    <string name="fb_login_protocol_scheme">fb531713431519858</string>

    <string name="regular_font">Manrope-Bold.ttf</string>
    <string name="semibold_font">Manrope-SemiBold.ttf</string>
    <string name="mediumbold_font">BebasNeue Bold.ttf</string>
    <string name="hardbold_font">Britannic Bold Bold.ttf</string>


    <string name="term_condition">By clicking on the Next button, you agree to our <u><a href="">Terms &amp; Conditions</a></u>.</string>

    <string name="new_rx">New Rx</string>
    <string name="pharmacology">Pharmacology</string>
    <string name="fun_facts">Fun Facts</string>
    <string name="otc">OTC</string>
    <string name="law">Law</string>
    <string name="email_address">Email Address</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="forgot">Forgot</string>
    <string name="password_reset_email_sent">Password Reset Email Sent</string>
    <string name="an_email_has_been_sent_to_your_registered_email_address">An email has been sent to your registered email address</string>
    <string name="new_user">New User</string>
    <string name="full_name">Full Name*</string>
    <string name="rules_objectives">Rules/Objective</string>
    <string name="game_objective_is_to_achieve_an_overall_drug_iq_of_guru"> Game objective is to achieve an Overall Drug IQ of Guru.</string>
    <string name="answer_3_correct_answers_in_each_category_to_advance_to_the_next_drug_iq_level_in_that_category"> Answer 3 correct answers in each category to advance to the next Drug IQ level in that category.</string>
    <string name="your_overall_drug_iq_is_the_combined_lifetime_score_of_all_categories"> Your Overall Drug IQ is the combined lifetime score of all categories.</string>
    <string name="the_world_is_under_widespread_disease"><![CDATA[The world is under widespread disease and the existence of humanity is at stake. The evil Dizzy Disease wants to spread sickness to the world.\nA young drug named Casey Capsule has embarked on a quest to rid the world of sickness. Casey wants to cure the world of disease and has decided to travel the world seeking knowledge in all areas of pharmacology.]]></string>
    <string name="settings">Settings</string>
    <string name="children_reaserch_donate">A portion of profit will be donated to\nSt. Jude\'s Children Research Hospital</string>
    <string name="an_infection_has">An Infection Has\nLead To Your Death</string>
    <string name="title_activity_incorrect_question">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>