<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_bg"
    android:fitsSystemWindows="true"
    tools:context=".main.view.LoginSignUpActivity.ForgetPaswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintForgot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/_40sdp"
        android:paddingTop="@dimen/_40sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingLeft="@dimen/_15sdp">
    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cassy"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layotTxtForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/imgMain"
        app:layout_constraintEnd_toEndOf="parent">

        <com.pharmacy.crack.utils.viewUtils.HardBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/limed_spruce"
            android:textSize="@dimen/_30sdp" />

        <com.pharmacy.crack.utils.viewUtils.HardBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="@color/wild_strawberry"
            android:text="Password?"
            android:textSize="@dimen/_30sdp" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/square_bg"
            android:paddingTop="@dimen/_40sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingLeft="@dimen/_20sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/layotTxtForgot"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.pharmacy.crack.utils.viewUtils.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/solid_black"/>

            <com.pharmacy.crack.utils.viewUtils.RegularEditText
                android:id="@+id/edtEmailForget"
                android:hint="@string/xyz_gmail_com"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:drawableLeft="@drawable/email"
                android:textColorHint="@color/dove_grey"
                android:textColor="@color/desert"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:maxLength="25"/>

        </LinearLayout>

        <com.pharmacy.crack.utils.viewUtils.RegularTextView
            android:id="@+id/txtSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintStart_toStartOf="@id/linearCard"
            app:layout_constraintEnd_toEndOf="@id/linearCard"
            app:layout_constraintTop_toBottomOf="@id/linearCard"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/clay_creek"
            android:gravity="center"
            android:text="Submit"
            android:background="@drawable/btn_default"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/txtSubmit">

            <com.pharmacy.crack.utils.viewUtils.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have account?"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <com.pharmacy.crack.utils.viewUtils.RegularTextView
                android:id="@+id/btnSignUpForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:textColor="@color/desert"
                android:text="@string/sign_up"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>