<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="LoginViewModel"
            type="com.pharmacy.crack.main.viewModel.loginSignUpViewModels.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_bg"
    android:fitsSystemWindows="true"
    tools:context=".main.view.LoginSignUpActivity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/_20sdp">
        <LinearLayout
            android:id="@+id/layotTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.pharmacy.crack.utils.viewUtils.HardBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pharmacy"
                android:textColor="@color/limed_spruce"
                android:textSize="@dimen/_30sdp" />

            <com.pharmacy.crack.utils.viewUtils.HardBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/wild_strawberry"
                android:text="Crack"
                android:textSize="@dimen/_30sdp" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/linearCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:background="@drawable/square_bg"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:paddingTop="@dimen/_60sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_120sdp"
            app:layout_constraintTop_toBottomOf="@id/layotTxt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtForgtPwd">

            <com.pharmacy.crack.utils.viewUtils.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/email_address"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/solid_black"/>

            <com.pharmacy.crack.utils.viewUtils.RegularEditText
                android:id="@+id/editEmailLogin"
                android:hint="@string/xyz_gmail_com"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:drawableStart="@drawable/email"
                android:textColorHint="@color/dove_grey"
                android:textColor="@color/textview_selector"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText1"
                android:maxLength="25" />

            <com.pharmacy.crack.utils.viewUtils.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/password"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/solid_black"/>

            <com.pharmacy.crack.utils.viewUtils.RegularEditText
                android:id="@+id/edtPasswordLogin"
                android:hint="*********"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColorHint="@color/dove_grey"
                android:maxLength="15"
                android:theme="@style/MyEditText1"
                android:textColor="@color/textview_selector" />

            <com.pharmacy.crack.utils.viewUtils.RegularTextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_17sdp"
                android:textColor="@color/clay_creek"
                android:gravity="center"
                android:text="Log In"
                android:background="@drawable/btn_default"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgCassy"
            app:layout_constraintTop_toBottomOf="@id/layotTxt"
            app:layout_constraintLeft_toLeftOf="@id/linearCard"
            app:layout_constraintRight_toRightOf="@id/linearCard"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:src="@drawable/cassy"/>


        <com.pharmacy.crack.utils.viewUtils.SemiBoldTextView
            android:id="@+id/txtForgtPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/linearCard"
            android:text="@string/forgot_password"
            android:textColor="@color/desert"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/linearCard"
            app:layout_constraintBottom_toTopOf="@id/txtCreateAccount"
            android:layout_marginTop="@dimen/_5sdp" />

        <com.pharmacy.crack.utils.viewUtils.RegularTextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintLeft_toLeftOf="@id/linearCard"
            app:layout_constraintRight_toRightOf="@id/linearCard"
            android:layout_marginRight="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:background="@drawable/btn_red"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txtForgtPwd"
            android:layout_marginTop="@dimen/_20sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/txtCreateAccount">

        <ImageView
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:src="@drawable/facebook"/>



            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/google"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>